--- a/src/pages/results.astro
+++ b/src/pages/results.astro
@@ -1,91 +1,91 @@
 ---
-import { Image } from "astro:assets";
-import GoogleMapsReviews from "../components/GoogleMapsReviews";
-import Layout from "../layouts/Layout.astro";
-import PageLayout from "../layouts/PageLayout.astro";
+import { Image } from 'astro:assets'
+import GoogleMapsReviews from '../components/GoogleMapsReviews'
+import Layout from '../layouts/Layout.astro'
+import PageLayout from '../layouts/PageLayout.astro'
 
 function generateRandomIntegers() {
-  const result = [];
-  for (let i = 0; i <= 5; i++) {
-    const randomInt = Math.floor(Math.random() * 37) + 1;
-    result.push(randomInt);
-  }
-  return result;
+	const result = []
+	for (let i = 0; i <= 5; i++) {
+		const randomInt = Math.floor(Math.random() * 37) + 1
+		result.push(randomInt)
+	}
+	return result
 }
 
-let randomNumbers = generateRandomIntegers();
+let randomNumbers = generateRandomIntegers()
 ---
 
 <Layout title="Results">
-  <PageLayout
-    title="results & reviews"
-    summary="Experience member transformations, tangible results, and rave reviews at Farrell Fitness. Join our community for weight loss, strength gains, and athletic improvements."
-    videoPath="/videos/teamVideo.mp4"
-  >
-    <div class="flex flex-wrap md:-m-2 -m-1">
-      <div class="flex flex-wrap w-1/2">
-        <div class="md:p-2 p-1 w-1/2">
-          <Image
-            width={600}
-            height={400}
-            alt="gallery"
-            class="w-full object-cover h-full object-center block"
-            src={`/images/transformation${randomNumbers[0]}-min.webp`}
-          />
-        </div>
-        <div class="md:p-2 p-1 w-1/2">
-          <Image
-            width={600}
-            height={400}
-            alt="gallery"
-            class="w-full object-cover h-full object-center block"
-            src={`/images/transformation${randomNumbers[1]}-min.webp`}
-          />
-        </div>
-        <div class="md:p-2 p-1 w-full">
-          <Image
-            width={600}
-            height={400}
-            alt="gallery"
-            class="w-full h-full object-cover object-center block"
-            src={`/images/transformation${randomNumbers[2]}-min.webp`}
-          />
-        </div>
-      </div>
-      <div class="flex flex-wrap w-1/2">
-        <div class="md:p-2 p-1 w-full">
-          <Image
-            width={600}
-            height={400}
-            alt="gallery"
-            class="w-full h-full object-cover object-center block"
-            src={`/images/transformation${randomNumbers[3]}-min.webp`}
-          />
-        </div>
-        <div class="md:p-2 p-1 w-1/2">
-          <Image
-            width={600}
-            height={400}
-            alt="gallery"
-            class="w-full object-cover h-full object-center block"
-            src={`/images/transformation${randomNumbers[4]}-min.webp`}
-          />
-        </div>
-        <div class="md:p-2 p-1 w-1/2">
-          <Image
-            width={600}
-            height={400}
-            alt="gallery"
-            class="w-full object-cover h-full object-center block"
-            src={`/images/transformation${randomNumbers[5]}-min.webp`}
-          />
-        </div>
-      </div>
-    </div>
-  </PageLayout>
-  <div class="w-full text-center mt-12 text-2xl mb-4">Google Reviews</div>
-  <div class="h-[0.1rem] bg-gray-100 relative">
-    <div class="absolute h-full w-1/2 bg-orange-600"></div>
-  </div>
-  <GoogleMapsReviews client:load />
+	<PageLayout
+		title="results & reviews"
+		summary="Experience member transformations, tangible results, and rave reviews at Farrell Fitness. Join our community for weight loss, strength gains, and athletic improvements."
+		videoPath="/videos/teamVideo.mp4"
+	>
+		<div class="flex flex-wrap md:-m-2 -m-1">
+			<div class="flex flex-wrap w-1/2">
+				<div class="md:p-2 p-1 w-1/2">
+					<Image
+						width={600}
+						height={400}
+						alt="gallery"
+						class="w-full object-cover h-full object-center block"
+						src={`/images/transformation${randomNumbers[0]}-min.webp`}
+					/>
+				</div>
+				<div class="md:p-2 p-1 w-1/2">
+					<Image
+						width={600}
+						height={400}
+						alt="gallery"
+						class="w-full object-cover h-full object-center block"
+						src={`/images/transformation${randomNumbers[1]}-min.webp`}
+					/>
+				</div>
+				<div class="md:p-2 p-1 w-full">
+					<Image
+						width={600}
+						height={400}
+						alt="gallery"
+						class="w-full h-full object-cover object-center block"
+						src={`/images/transformation${randomNumbers[2]}-min.webp`}
+					/>
+				</div>
+			</div>
+			<div class="flex flex-wrap w-1/2">
+				<div class="md:p-2 p-1 w-full">
+					<Image
+						width={600}
+						height={400}
+						alt="gallery"
+						class="w-full h-full object-cover object-center block"
+						src={`/images/transformation${randomNumbers[3]}-min.webp`}
+					/>
+				</div>
+				<div class="md:p-2 p-1 w-1/2">
+					<Image
+						width={600}
+						height={400}
+						alt="gallery"
+						class="w-full object-cover h-full object-center block"
+						src={`/images/transformation${randomNumbers[4]}-min.webp`}
+					/>
+				</div>
+				<div class="md:p-2 p-1 w-1/2">
+					<Image
+						width={600}
+						height={400}
+						alt="gallery"
+						class="w-full object-cover h-full object-center block"
+						src={`/images/transformation${randomNumbers[5]}-min.webp`}
+					/>
+				</div>
+			</div>
+		</div>
+	</PageLayout>
+	<div class="w-full text-center mt-12 text-2xl mb-4">Google Reviews</div>
+	<div class="h-[0.1rem] bg-gray-100 relative">
+		<div class="absolute h-full w-1/2 bg-orange-600"></div>
+	</div>
+	<GoogleMapsReviews client:load />
 </Layout>
