--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,29 +1,29 @@
 ---
-import VideoPlayer from "../components/VideoPlayer";
+import VideoPlayer from '../components/VideoPlayer'
 
 export interface Props {
-  videoPath: string;
-  title: string;
-  summary: string;
+	videoPath: string
+	title: string
+	summary: string
 }
 
-const { videoPath, title, summary } = Astro.props;
+const { videoPath, title, summary } = Astro.props
 ---
 
 <section>
-  <!-- <VideoPlayer videoPath={videoPath} /> -->
-  <div class="flex flex-wrap items-center w-full md:mb-20 mb-10">
-    <div class="md:w-1/3 w-full mb-6 md:mb-0">
-      <h1
-        class="md:text-5xl text-3xl mb-2 font-black tracking-widest text-transparent shadow-orange-600 italic"
-        style="-webkit-text-stroke-width: 1px; -webkit-text-stroke-color: var(--tw-shadow-color);"
-      >
-        {title}
-      </h1>
-    </div>
-    <p class="md:w-2/3 w-full md:pl-6">
-      {summary}
-    </p>
-  </div>
-  <slot />
+	<VideoPlayer videoPath={videoPath} />
+	<div class="flex flex-wrap items-center w-full md:mb-20 mb-10">
+		<div class="md:w-1/3 w-full mb-6 md:mb-0">
+			<h1
+				class="md:text-5xl text-3xl mb-2 font-black tracking-widest text-transparent shadow-orange-600 italic"
+				style="-webkit-text-stroke-width: 1px; -webkit-text-stroke-color: var(--tw-shadow-color);"
+			>
+				{title}
+			</h1>
+		</div>
+		<p class="md:w-2/3 w-full md:pl-6">
+			{summary}
+		</p>
+	</div>
+	<slot />
 </section>
