--- a/src/pages/merch.astro
+++ b/src/pages/merch.astro
@@ -1,51 +1,46 @@
 ---
-import { Image } from "astro:assets";
-import Button from "../components/Button";
-import { items } from "../js/merchandiseData";
-import Layout from "../layouts/Layout.astro";
-import PageLayout from "../layouts/PageLayout.astro";
+import { Image } from 'astro:assets'
+import Button from '../components/Button'
+import { items } from '../js/merchandiseData'
+import Layout from '../layouts/Layout.astro'
+import PageLayout from '../layouts/PageLayout.astro'
 ---
 
 <Layout title="Merchandise">
-  <PageLayout
-    title="Latest Gear"
-    summary="Elevate Your Fitness Style: Shop our exclusive collection of Farrell Fitness merchandise and wear your passion for fitness with pride!"
-    videoPath=""
-  >
-    <div class="flex flex-wrap -m-4">
-      {
-        items.map(({ title, category, price, url }, index) => (
-          <div class="lg:w-1/3 md:w-1/2 p-4 w-full">
-            <a class="block relative h-48 rounded overflow-hidden">
-              <Image
-                width={300}
-                height={200}
-                alt="ecommerce"
-                class="object-cover object-center w-full h-full block"
-                src={url}
-              />
-            </a>
-            <div class="mt-4">
-              <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">
-                {category}
-              </h3>
-              <h2 class="text-orange-600 text-lg font-medium">{title}</h2>
-              <p class="mt-1">€{price}</p>
-            </div>
-          </div>
-        ))
-      }
-    </div>
-    <div
-      class="flex flex-col sm:flex-row sm:items-center items-start mt-12 md:mt-24"
-    >
-      <h1 class="flex-grow sm:pr-16">
-        Discover the perfect gear for your fitness journey. Visit our gym and
-        inquire about purchasing any of these items. With limited stock
-        available, seize the opportunity to look your best while pushing your
-        limits.
-      </h1>
-      <Button text="Shop now" />
-    </div>
-  </PageLayout>
+	<PageLayout
+		title="Latest Gear"
+		summary="Elevate Your Fitness Style: Shop our exclusive collection of Farrell Fitness merchandise and wear your passion for fitness with pride!"
+		videoPath=""
+	>
+		<div class="flex flex-wrap -m-4">
+			{
+				items.map(({ title, category, price, url }, index) => (
+					<div class="lg:w-1/3 md:w-1/2 p-4 w-full">
+						<a class="block relative h-48 rounded overflow-hidden">
+							<Image
+								width={300}
+								height={200}
+								alt="ecommerce"
+								class="object-cover object-center w-full h-full block"
+								src={url}
+							/>
+						</a>
+						<div class="mt-4">
+							<h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">{category}</h3>
+							<h2 class="text-orange-600 text-lg font-medium">{title}</h2>
+							<p class="mt-1">€{price}</p>
+						</div>
+					</div>
+				))
+			}
+		</div>
+		<div class="flex flex-col sm:flex-row sm:items-center items-start mt-12 md:mt-24">
+			<h1 class="flex-grow sm:pr-16">
+				Discover the perfect gear for your fitness journey. Visit our gym and inquire about
+				purchasing any of these items. With limited stock available, seize the opportunity to look
+				your best while pushing your limits.
+			</h1>
+			<Button text="Shop now" />
+		</div>
+	</PageLayout>
 </Layout>
