--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -1,37 +1,37 @@
 ---
-import { Image } from "astro:assets";
-import Button from "../components/Button";
-import { services } from "../js/servicesData";
-import Layout from "../layouts/Layout.astro";
-import PageLayout from "../layouts/PageLayout.astro";
+import { Image } from 'astro:assets'
+import Button from '../components/Button'
+import { services } from '../js/servicesData'
+import Layout from '../layouts/Layout.astro'
+import PageLayout from '../layouts/PageLayout.astro'
 ---
 
 <Layout title="Services">
-  <PageLayout
-    videoPath="/videos/ptVideo.mp4"
-    title="Advanced Body Care Solutions"
-    summary="Transform with tailored physical therapy, 3D body scanning, dry needling, cupping for relaxation, improved circulation, and holistic wellness."
-  >
-    <div class="flex flex-wrap -m-4">
-      {
-        services.map(({ title, subTitle, excerpt, url }, index) => (
-          <div class="md:w-1/3 p-4">
-            <div class="bg-gray-900 p-6 rounded-lg">
-              <Image
-                width={300}
-                height={200}
-                class="h-40 rounded w-full object-cover object-center mb-6"
-                src={url}
-                alt="content"
-              />
-              <h3 class="text-orange-600 text-xs font-medium">{subTitle}</h3>
-              <h2 class="text-lg font-medium mb-4">{title}</h2>
-              <p class="text-sm">{excerpt}</p>
-              <Button text="Sign up" />
-            </div>
-          </div>
-        ))
-      }
-    </div>
-  </PageLayout>
+	<PageLayout
+		videoPath="/videos/ptVideo.mp4"
+		title="Advanced Body Care Solutions"
+		summary="Transform with tailored physical therapy, 3D body scanning, dry needling, cupping for relaxation, improved circulation, and holistic wellness."
+	>
+		<div class="flex flex-wrap -m-4">
+			{
+				services.map(({ title, subTitle, excerpt, url }, index) => (
+					<div class="md:w-1/3 p-4">
+						<div class="bg-gray-900 p-6 rounded-lg">
+							<Image
+								width={300}
+								height={200}
+								class="h-40 rounded w-full object-cover object-center mb-6"
+								src={url}
+								alt="content"
+							/>
+							<h3 class="text-orange-600 text-xs font-medium">{subTitle}</h3>
+							<h2 class="text-lg font-medium mb-4">{title}</h2>
+							<p class="text-sm">{excerpt}</p>
+							<Button text="Sign up" />
+						</div>
+					</div>
+				))
+			}
+		</div>
+	</PageLayout>
 </Layout>
