--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -1,37 +1,37 @@
 ---
-import { Image } from "astro:assets";
-import { team } from "../js/teamData";
-import Layout from "../layouts/Layout.astro";
-import PageLayout from "../layouts/PageLayout.astro";
+import { Image } from 'astro:assets'
+import { team } from '../js/teamData'
+import Layout from '../layouts/Layout.astro'
+import PageLayout from '../layouts/PageLayout.astro'
 ---
 
 <Layout title="Team Members">
-  <PageLayout
-    title="meet our team"
-    summary="Meet the dynamic team at Farrell Fitness, a group of fitness professionals committed to transforming lives. From experienced trainers and coaches to knowledgeable staff, we are here to guide and support you on your fitness journey."
-    videoPath="/videos/oldMainVideo.mp4"
-  >
-    <div class="flex flex-wrap text-base font-medium justify-center">
-      {
-        team.map(({ desc, name, position, url }, index) => (
-          <div class="p-4 lg:w-1/3">
-            <div class="h-full flex flex-col items-center text-center">
-              <Image
-                width={450}
-                height={300}
-                alt="team"
-                class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4"
-                src={url}
-              />
-              <div class="w-full">
-                <h2 class="font-semibold text-lg ">{name}</h2>
-                <h3 class="text-orange-600 mb-3">{position}</h3>
-                <p class="mb-4 text-sm">{desc}</p>
-              </div>
-            </div>
-          </div>
-        ))
-      }
-    </div>
-  </PageLayout>
+	<PageLayout
+		title="meet our team"
+		summary="Meet the dynamic team at Farrell Fitness, a group of fitness professionals committed to transforming lives. From experienced trainers and coaches to knowledgeable staff, we are here to guide and support you on your fitness journey."
+		videoPath="/videos/oldMainVideo.mp4"
+	>
+		<div class="flex flex-wrap text-base font-medium justify-center">
+			{
+				team.map(({ desc, name, position, url }, index) => (
+					<div class="p-4 lg:w-1/3">
+						<div class="h-full flex flex-col items-center text-center">
+							<Image
+								width={450}
+								height={300}
+								alt="team"
+								class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4"
+								src={url}
+							/>
+							<div class="w-full">
+								<h2 class="font-semibold text-lg ">{name}</h2>
+								<h3 class="text-orange-600 mb-3">{position}</h3>
+								<p class="mb-4 text-sm">{desc}</p>
+							</div>
+						</div>
+					</div>
+				))
+			}
+		</div>
+	</PageLayout>
 </Layout>
