Update styling and add sitemap

--- a/src/pages/classes.astro
+++ b/src/pages/classes.astro
@@ -27,11 +27,11 @@ import PageLayout from '../layouts/PageLayout.astro'
 								src={url}
 							/>
 						</div>
-						<h2 class="mt-5 text-lg font-bold text-orange-600">{title}</h2>
+						<h2 class="mt-5 text-lg font-bold text-primary">{title}</h2>
 						<p class="text-sm mt-2">{excerpt}</p>
 						<a
 							href="https://legitfit.com/authenticate/signup/FarrellFitness"
-							class="text-orange-600 inline-flex items-center mt-3 hover:text-orange-800"
+							class="text-primary inline-flex items-center mt-3 hover:text-primary-800"
 						>
 							sign up
 							<svg
