--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,14 +17,14 @@ import Layout from '../layouts/Layout.astro'
 	<VideoPlayer client:visible videoPath="/videos/OpenGym.webm" />
 	<div>
 		<h1 class="md:text-8xl text-4xl font-black text-center flex flex-col">
-			<span class="leading-snug tracking-tight">sign up to</span>
+			<span class="leading-snug tracking-tight text-shadow">sign up to</span>
 			<a
 				href="https://legitfit.com/authenticate/signup/FarrellFitness"
-				class="text-orange-600 hover:text-orange-800 hover:cursor-pointer leading-snug tracking-tight"
+				class="text-primary hover:text-primary-800 hover:cursor-pointer leading-snug tracking-tight"
 			>
 				farrell fitness
 			</a>
-			<span class="leading-snug tracking-tight">now</span>
+			<span class="leading-snug tracking-tight text-shadow">now</span>
 		</h1>
 	</div>
 	<h1 class="md:text-8xl text-4xl text-center leading-snug tracking-tight font-black">
@@ -32,10 +32,10 @@ import Layout from '../layouts/Layout.astro'
 	</h1>
 	<div class="md:space-y-8 space-y-4 text-sm">
 		<p class="flex justify-between items-center w-full md:text-4xl">
-			<span>Monday - Friday</span><span class="bg-orange-600 px-2 py-1">6:00am - 9:30pm</span>
+			<span>Monday - Friday</span><span class="bg-primary px-2 py-1">6:00am - 9:30pm</span>
 		</p>
 		<p class="flex justify-between w-full md:text-4xl">
-			<span>Saturday - Sunday</span><span class="bg-orange-600 px-2 py-1">8:00am - 4:00pm</span>
+			<span>Saturday - Sunday</span><span class="bg-primary px-2 py-1">8:00am - 4:00pm</span>
 		</p>
 	</div>
 	<PricingComponent />
@@ -49,7 +49,7 @@ import Layout from '../layouts/Layout.astro'
 	<section class="aspect-square relative flex justify-center items-center">
 		<div class="flex space-y-12 h-full">
 			<div
-				class="bg-gray-300 overflow-hidden p-10 flex items-end justify-start relative -mx-6 md:mx-0"
+				class="bg-secondary-300 overflow-hidden p-10 flex items-end justify-start relative -mx-6 md:mx-0"
 			>
 				<iframe
 					class="absolute inset-0"
@@ -58,15 +58,15 @@ import Layout from '../layouts/Layout.astro'
 					width="100%"
 					height="100%"></iframe>
 				<div
-					class="tracking-normal bg-white relative flex flex-wrap py-6 rounded shadow-md text-gray-950"
+					class="tracking-normal bg-secondary relative flex flex-wrap py-6 rounded shadow-md text-secondary-950"
 				>
 					<div class="lg:w-1/2 px-6">
 						<h2 class="">Farrell Fitness 27, Woodbine Business Park, New Ross, Co. Wexford</h2>
-						<p class="mt-1 text-gray-400">Gym & Fitness Center</p>
+						<p class="mt-1 text-secondary-400">Gym & Fitness Center</p>
 					</div>
 					<div class="lg:w-1/2 px-6 mt-4 lg:mt-0">
 						<h2 class="pr-4">EMAIL</h2>
-						<a href="mailto:info.farrellfitness@gmail.com" class="text-orange-600"
+						<a href="mailto:info.farrellfitness@gmail.com" class="text-primary"
 							>info.farrellfitness@gmail.com</a
 						>
 						<h2 class="mt-4">Phone</h2>
