--- a/src/pages/results.astro
+++ b/src/pages/results.astro
@@ -84,8 +84,8 @@ let randomNumbers = generateRandomIntegers()
 		</div>
 	</PageLayout>
 	<div class="w-full text-center mt-12 text-2xl mb-4">Google Reviews</div>
-	<div class="h-[0.1rem] bg-gray-100 relative">
-		<div class="absolute h-full w-1/2 bg-orange-600"></div>
+	<div class="h-[0.1rem] bg-secondary relative">
+		<div class="absolute h-full w-1/2 bg-primary"></div>
 	</div>
 	<GoogleMapsReviews client:load />
 </Layout>
