--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,32 +28,29 @@ const { title } = Astro.props
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+		<link rel="sitemap" href="/sitemap-index.xml" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Farrell Fitness | {title}</title>
 	</head>
 
 	<body
-		class="container mx-auto max-w-5xl bg-slate-950 font-medium uppercase tracking-widest text-white w-full"
+		class="container mx-auto max-w-5xl bg-secondary-950 font-medium uppercase tracking-widest text-secondary w-full"
 	>
 		<div
 			style="clip-path: polygon(100% 0, 60% 0, 100% 100%)"
-			class="fixed inset-0 -z-10 bg-orange-600 opacity-75"
+			class="fixed inset-0 -z-10 bg-primary opacity-75"
 		>
 		</div>
-		<div
-			style="clip-path: polygon(100% 0, 75% 0, 100% 65%)"
-			class="fixed inset-0 -z-20 bg-orange-600"
-		>
+		<div style="clip-path: polygon(100% 0, 75% 0, 100% 65%)" class="fixed inset-0 -z-20 bg-primary">
 		</div>
 		<div
 			style="clip-path: polygon(45% 0, 55% 0, 95% 100%, 85% 100%)"
-			class="fixed inset-0 -z-20 bg-orange-600 opacity-25"
+			class="fixed inset-0 -z-20 bg-primary opacity-25"
 		>
 		</div>
 		<Nav client:load />
-		<div class="h-[.1rem] bg-gray-200 rounded overflow-hidden relative z-20">
-			<div class="w-24 h-full bg-orange-600"></div>
+		<div class="h-[.1rem] bg-secondary rounded overflow-hidden relative z-20">
+			<div class="w-24 h-full bg-primary"></div>
 		</div>
 		<div class="relative mx-6 my-12 md:my-24 space-y-12 md:space-y-24">
 			<slot />
