--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -15,7 +15,7 @@ const { videoPath, title, summary } = Astro.props
 	<div class="flex flex-wrap items-center w-full md:mb-20 mb-10">
 		<div class="md:w-1/3 w-full mb-6 md:mb-0">
 			<h1
-				class="md:text-5xl text-3xl mb-2 font-black tracking-widest text-transparent shadow-orange-600 italic"
+				class="md:text-5xl text-3xl mb-2 font-black tracking-widest text-transparent shadow-primary italic"
 				style="-webkit-text-stroke-width: 1px; -webkit-text-stroke-color: var(--tw-shadow-color);"
 			>
 				{title}
