--- a/src/pages/merch.astro
+++ b/src/pages/merch.astro
@@ -26,8 +26,8 @@ import PageLayout from '../layouts/PageLayout.astro'
 							/>
 						</a>
 						<div class="mt-4">
-							<h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">{category}</h3>
-							<h2 class="text-orange-600 text-lg font-medium">{title}</h2>
+							<h3 class="text-secondary-500 text-xs tracking-widest title-font mb-1">{category}</h3>
+							<h2 class="text-primary text-lg font-medium">{title}</h2>
 							<p class="mt-1">€{price}</p>
 						</div>
 					</div>
