--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -16,7 +16,7 @@ import PageLayout from '../layouts/PageLayout.astro'
 			{
 				services.map(({ title, subTitle, excerpt, url }, index) => (
 					<div class="md:w-1/3 p-4">
-						<div class="bg-gray-900 p-6 rounded-lg">
+						<div class="bg-secondary-900 p-6 rounded-lg">
 							<Image
 								width={300}
 								height={200}
@@ -24,7 +24,7 @@ import PageLayout from '../layouts/PageLayout.astro'
 								src={url}
 								alt="content"
 							/>
-							<h3 class="text-orange-600 text-xs font-medium">{subTitle}</h3>
+							<h3 class="text-primary text-xs font-medium">{subTitle}</h3>
 							<h2 class="text-lg font-medium mb-4">{title}</h2>
 							<p class="text-sm">{excerpt}</p>
 							<Button text="Sign up" />
