--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -25,7 +25,7 @@ import PageLayout from '../layouts/PageLayout.astro'
 							/>
 							<div class="w-full">
 								<h2 class="font-semibold text-lg ">{name}</h2>
-								<h3 class="text-orange-600 mb-3">{position}</h3>
+								<h3 class="text-primary mb-3">{position}</h3>
 								<p class="mb-4 text-sm">{desc}</p>
 							</div>
 						</div>
