Clean up some not needed files and optimize

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Layout from '../layouts/Layout.astro'
 		<Image src={Logo} alt="Logo" loading="eager" />
 	</div>
 	<!-- <FFLogo /> -->
-	<VideoPlayer client:visible videoPath="/videos/OpenGym.webm" />
+	<VideoPlayer client:visible videoPath="/videos/OpenGym.mp4" />
 	<div>
 		<h1 class="md:text-8xl text-4xl font-black text-center flex flex-col">
 			<span class="leading-snug tracking-tight text-shadow">sign up to</span>
